# Separate workspace: these crates only build for wasm32-unknown-unknown.
#   cargo build --manifest-path guests/Cargo.toml --target wasm32-unknown-unknown --release
[workspace]
resolver = "2"
members = ["agg", "transfer", "place_order", "top_customers"]

[profile.release]
opt-level = "s"
lto = true
strip = true
