[package]
name = "fluent-guest-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Attribute macros for fluent31 WASM guest entry points (#[fluent_guest::query], #[fluent_guest::execute], #[fluent_guest::on_touch], #[fluent_guest::on_apply])"

[lib]
proc-macro = true
