[package]
name = "fluent-server"
version.workspace = true
edition.workspace = true
description = "Server mode for fluent31: GraphQL, the wire pipe, and the replication join point over one shared database handle in one process"

[lib]
name = "fluent_server"
path = "src/lib.rs"

[[bin]]
name = "fluent-server"
path = "src/main.rs"

[dependencies]
fluent31 = { path = "../fluent31" }
fluent-graphql = { path = "../fluent-graphql" }
fluent-wire = { path = "../fluent-wire" }
fluent-replication = { path = "../fluent-replication" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time"] }

[dev-dependencies]
tempfile = "3"
