[package]
name = "fluent31"
version.workspace = true
edition.workspace = true
description = "LSM key-value engine with MVCC, io_uring IO, and in-database WASM execution"

[dependencies]
crossbeam-skiplist = "0.1"
parking_lot = "0.12"
crc32fast = "1"
# deterministic store identity (identity.rs): truncated SHA-256 lineage hash
sha2 = "0.10"
lz4_flex = { version = "0.11", default-features = false, features = ["std", "safe-encode", "safe-decode"] }
wasmtime = { version = "46.0.1", default-features = false, features = ["runtime", "cranelift", "wat"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
serde_json = "1"

# These examples demo the wasm plane (executors/triggers/queries); without the
# feature they have no API to call, so cargo must skip them rather than fail.
[[example]]
name = "cascade_delete"
required-features = ["wasm"]

[[example]]
name = "claim"
required-features = ["wasm"]

[[example]]
name = "dynamic_index"
required-features = ["wasm"]

[[example]]
name = "live_stats"
required-features = ["wasm"]

[features]
default = ["wasm"]
# In-database WASM execution (queries/executors). Disable for a pure
# storage-engine build (e.g. cross-checking the io_uring backend).
wasm = ["dep:wasmtime"]
# Test-only: exposes the IO traits and `Db::open_with_io` so durability tests
# can inject a fault-injecting backend (fsync failure, short/torn writes,
# ENOSPC). No effect on a normal build; never enable in production.
fault-injection = []
